--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             <p class="subtitle">Building digital experiences that matter</p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn btn-primary">Get in Touch</a>
-                <a href="Resume.pdf" class="btn btn-outline">Download Resume</a>
+                <a href="ResumeFile.pdf" class="btn btn-outline">Download Resume</a>
             </div>
         </div>
     </section>
